<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (c) 2013, Redsolution LTD. All rights reserved.

	This file is part of Barcode Scanner Terminal project;
	you can redistribute it and/or modify it under the terms of
	the GNU General Public License, Version 3.

	Barcode Scanner Terminal is distributed in the hope that it will be
	useful, but WITHOUT ANY WARRANTY; without even the implied warranty
	of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
	See the GNU General Public License for more details.

	You should have received a copy of the GNU General Public License,
	along with this program. If not, see http://www.gnu.org/licenses/.
-->
<resources>
  <string name="app_name">MoySklad Barcode Scanner Terminal</string>
  <string name="continue_action">Continue</string>
  <string name="continue_summary">There is no document</string>
  <string name="continue_supply_summary">Acceptance in progress…</string>
  <string name="continue_inventory_summary">Inventory in progress…</string>
  <string name="continue_demand_summary">Dispatch in progress…</string>
  <string name="continue_move_summary">Transfer in progress…</string>
  <string name="import_action">Import</string>
  <string name="import_summary">Load data</string>
  <string name="supply_action">Accept goods</string>
  <string name="inventory_action">Inventory</string>
  <string name="demand_action">Dispatch</string>
  <string name="retail_action">Retail</string>
  <string name="move_action">Transfer</string>
  <string name="settings_action">Settings</string>
  <string name="another_title">New document</string>
  <string name="another_confirm">Do you really want to remove previous document and create new one?</string>
  <string name="auth_title">Authorization settings</string>
  <string name="login_title">Login or email</string>
  <string name="login_hint">name@company</string>
  <string name="password_title">password</string>
  <string name="incorrect_login">MoySklad does not support non ASCII symbols in login. Please use your email.</string>
  <string name="wait">Please, wait &#8230;</string>
  <string name="wait_import">Load %1$s (%2$d/%3$d)&#8230;</string>
  <string name="auth_error">Authorization error</string>
  <string name="server_error">Server error</string>
  <string name="connection_error">Connection error</string>
  <string name="my_company_title">My company</string>
  <string name="warehouse_title">Warehouse</string>
  <string name="target_warehouse_title">Target warehouse</string>
  <string name="supply_company_title">Supplier company</string>
  <string name="supply_contract_title">Supplier contract</string>
  <string name="demand_company_title">Customer company</string>
  <string name="demand_contract_title">Customer contract</string>
  <string name="project_title">Project</string>
  <string name="price_type_title">Price type</string>
  <string name="complite_warning">Please fill the form</string>
  <string name="nothing">&lt; Nothing ></string>
  <string name="defaults_title">Default values</string>
  <string name="defaults_hint">There is no defaults. Do you want to set them now?</string>
  <string name="create">Create</string>
  <string name="install_title">Install Barcode Scanner?</string>
  <string name="install_message">This application requires Barcode Scanner. Would you like to install it?</string>
  <string name="install_fail">There is no Android Market. Please install Barcode Scanner manually.</string>
  <string name="verify_title">Verify good</string>
  <string name="name_title">Name</string>
  <string name="barcode_title">Barcode</string>
  <string name="code_title">Code</string>
  <string name="product_code_title">Product code</string>
  <string name="quantity_title">Quantity</string>
  <string name="rest_text">%1$s + </string>
  <string name="more">More</string>
  <string name="finish">Finish</string>
  <string name="good_with_extra">%1$s (%2$s)</string>
  <string name="good_with_price_and_uom">%1$s (%2$s / %3$s)</string>
  <string name="verification_error">Good can`t be added</string>
  <string name="multiple_objects_returned">Multiple goods were found. Please fix it in MoySklad.</string>
  <string name="object_does_not_exist">There is no goods with such barcode. Do you want to choose one and associate with barcode?</string>
  <string name="search_title">Search good</string>
  <string name="search_hint">Enter product code or name</string>
  <string name="create_good">Create new good %s</string>
  <string name="folder">Folder</string>
  <string name="custom_good">New good</string>
  <string name="show_folders">Show folders</string>
  <string name="hide_folders">Hide folders</string>
  <string name="scan_action">Scan</string>
  <string name="barcode_action">Add using barcode</string>
  <string name="barcode_summary">Enter value from keyboard</string>
  <string name="list_action">List of goods</string>
  <string name="list_summary">Goods: %1$d, items: %2$s</string>
  <string name="header_action">Change header</string>
  <string name="send_action">Send document</string>
  <string name="cancel_action">Remove document</string>
  <string name="cancel_confirm">Do you really want to remove the document?</string>
  <string name="summary_text">%1$s %2$s</string>
  <string name="quantity_action">Change quantity</string>
  <string name="remove_action">Remove</string>
  <string name="remove_confirm">Do you really want to remove the good?</string>
  <string name="new_barcode_description">New barcodes were found.\nBarcode, Barcode type, Product code / name:\n</string>
  <string name="custom_good_description">New goods were found.\nQuantity, Name:\n</string>
  <string name="about_action">About</string>
  <string name="about_develop">Developed by Redsolution.ru</string>
  <string name="about_name">MoySklad</string>
  <string name="about_summary">Online store integrated with MoySklad — info@redsolution.ru</string>
  <string name="about_title">Barcode scanner terminal for moysklad.ru service</string>
  <string name="debug_enabled">Debug enabled</string>
  <string name="source_uom">units of measure</string>
  <string name="source_company">companies</string>
  <string name="source_good_folder">good folders</string>
  <string name="source_good">goods</string>
  <string name="source_my_company">my companies</string>
  <string name="source_warehouse">warehouses</string>
  <string name="source_project">projects</string>
  <string name="source_contract">contracts</string>
  <string name="source_price_type">price types</string>
</resources>
