<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (c) 2013, Redsolution LTD. All rights reserved.

	This file is part of Barcode Scanner Terminal project;
	you can redistribute it and/or modify it under the terms of
	the GNU General Public License, Version 3.

	Barcode Scanner Terminal is distributed in the hope that it will be
	useful, but WITHOUT ANY WARRANTY; without even the implied warranty
	of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
	See the GNU General Public License for more details.

	You should have received a copy of the GNU General Public License,
	along with this program. If not, see http://www.gnu.org/licenses/.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceScreen
        android:key="@string/continue_action"
        android:title="@string/continue_action"
        android:summary="@string/continue_summary"
        />
    <PreferenceScreen
        android:key="@string/supply_action"
        android:title="@string/supply_action"
        />
    <PreferenceScreen
        android:key="@string/inventory_action"
        android:title="@string/inventory_action"
        />
    <PreferenceScreen
        android:key="@string/demand_action"
        android:title="@string/demand_action"
        />
    <PreferenceScreen
        android:key="@string/move_action"
        android:title="@string/move_action"
        />
    <PreferenceScreen
        android:key="@string/import_action"
        android:title="@string/import_action"
        android:summary="@string/import_summary"
        />
    <PreferenceScreen
        android:key="@string/settings_action"
        android:title="@string/settings_action"
        />
    <PreferenceScreen
        android:key="@string/about_action"
        android:title="@string/about_action"
        />
</PreferenceScreen>