<?xml version="1.0" encoding="utf-8"?>
<!--
	Copyright (c) 2013, Redsolution LTD. All rights reserved.

	This file is part of Barcode Scanner Terminal project;
	you can redistribute it and/or modify it under the terms of
	the GNU General Public License, Version 3.

	Barcode Scanner Terminal is distributed in the hope that it will be
	useful, but WITHOUT ANY WARRANTY; without even the implied warranty
	of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
	See the GNU General Public License for more details.

	You should have received a copy of the GNU General Public License,
	along with this program. If not, see http://www.gnu.org/licenses/.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceScreen
        android:key="@string/scan_action"
        android:title="@string/scan_action"
        />
    <PreferenceScreen
        android:key="@string/barcode_action"
        android:title="@string/barcode_action"
        android:summary="@string/barcode_summary"
        />
    <PreferenceScreen
        android:key="@string/list_action"
        android:title="@string/list_action"
        android:summary="@string/list_summary"
        />
    <PreferenceScreen
        android:key="@string/header_action"
        android:title="@string/header_action"
        />
    <Preference
        android:key="@string/send_action"
        android:title="@string/send_action"
        />
    <Preference
        android:key="@string/cancel_action"
        android:title="@string/cancel_action"
        />
</PreferenceScreen>