<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/verify_title"
    >
    <PreferenceCategory
        android:title="@string/name_title"
        >
        <PreferenceScreen
            android:key="@string/name_title"
            android:title="@string/name_title"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/barcode_title"
        >
        <PreferenceScreen
            android:key="@string/barcode_title"
            android:title="@string/barcode_title"
            />
    </PreferenceCategory>
        <PreferenceCategory
        android:title="@string/code_title"
        >
        <PreferenceScreen
            android:key="@string/code_title"
            android:title="@string/code_title"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/product_code_title"
        >
        <PreferenceScreen
            android:key="@string/product_code_title"
            android:title="@string/product_code_title"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/quantity_title"
        />
</PreferenceScreen>